Fix isses with floating point values